[gd_scene load_steps=4 format=3 uid="uid://cciep62ejmhra"]

[ext_resource type="Script" uid="uid://c4pgxhcbvx22n" path="res://Components/Card/Card.gd" id="1_lwicv"]
[ext_resource type="Texture2D" uid="uid://d3rdqeyguapgg" path="res://Static/Assets/Cards/Ovir/00_AISHA.jpg" id="1_uutmy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwicv"]
size = Vector2(204, 283)

[node name="Card" type="Node2D"]
script = ExtResource("1_lwicv")

[node name="CardSprite" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_uutmy")

[node name="CardArea" type="Area2D" parent="."]
scale = Vector2(1.13208, 1.13208)

[node name="Collision_Full" type="CollisionShape2D" parent="CardArea"]
shape = SubResource("RectangleShape2D_lwicv")

[node name="Collision_Holder" type="CollisionPolygon2D" parent="CardArea"]
visible = false
position = Vector2(-71.5499, -159.883)
polygon = PackedVector2Array(10.6, -12.3666, 136.916, 36.2166, 118.367, 287.083, -2.65, 231.433)

[node name="Collision_Slot" type="CollisionPolygon2D" parent="CardArea"]
visible = false
position = Vector2(-37.0999, -10.6)
polygon = PackedVector2Array(-113.95, 104.233, -15.0166, 203.166, 227.016, 37.0999, 117.483, -55.6499)

[connection signal="mouse_entered" from="CardArea" to="." method="_on_area_2d_mouse_entered"]
